# litegitpuller

./: .copier-answers.yml  .gitignore  .prettierignore  .readthedocs.yml  CHANGELOG.md  README.md  RELEASE.md  docs-environment.yml  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
docs/: conf.py  index.md
litegitpuller/: __init__.py
src/: githubpuller.ts  gitpuller.ts  index.ts
src/__tests__/: litegitpuller.spec.ts
ui-tests/: package.json  playwright.config.js
ui-tests/nbgitpuller_test/: test.spec.ts
ui-tests/tests/: litegitpuller.spec.ts
